RMC-51 Readds footer, solved problem of overlapping content

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -19,6 +19,7 @@
   padding: 1px;
   border-radius: 5px;
   background-color: #313133a4;
+  margin-bottom: 5%;
 }
 
 .reminderHeader {
